--- a/index1.html
+++ b/index1.html
@@ -20,6 +20,9 @@
                 <li class="breadcrumb-item"><a href="#">About</a></li>
             </ol>
         </nav>
+        <footer>
+            <h1>All rights reserved</h1>
+        </footer>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
